Fixes the ugly scrollbars.

--- a/app/assets/stylesheets/player.css.scss
+++ b/app/assets/stylesheets/player.css.scss
@@ -155,4 +155,8 @@ body#index {
       }
     }
   }
+
+  ::-webkit-scrollbar {
+      display: none;
+  }
 }
